[package]
name = "godview_core"
version = "0.3.0"
edition = "2021"
authors = ["GodView Team"]
description = "High-precision distributed spatial computing protocol library"
license = "MIT"

[features]
default = []
visualization = ["rerun"]
kitti = ["kitti-dataset"]

[dependencies]
# Math & Physics (The "Time" Engine)
nalgebra = { version = "0.33", features = ["serde-serialize"] }
simba = "0.9"

# Spatial Indexing (The "Space" Engine)
h3o = { version = "0.9", features = ["geo", "serde"] }
# oktree = "0.5"  # Temporarily disabled - requires Position trait implementation (see BUGS.md)
geo = "0.28"

# Security (The "Trust" Engine)
biscuit-auth = "4.0"
ed25519-dalek = { version = "2.1", features = ["serde"] }
rand = "0.8"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }

# Visualization (Optional)
rerun = { version = "0.20", optional = true }

# KITTI Dataset Loader (Optional)
kitti-dataset = { version = "0.3", optional = true }

[dev-dependencies]
approx = "0.5"

[[example]]
name = "rerun_demo"
required-features = ["visualization"]

[[example]]
name = "kitti_demo"
required-features = ["visualization", "kitti"]

